# opscan

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
opscan/: cli.py  scanner.py
tests/: test_scanner.py
